Restore "same layer" check in CalculateRectsWithGeometryMapper

If the root layer and the "current" layer are the same, we can't really
guarantee that the "pre"-transform is the same as the "local border
box"-transform - for example in the case where we're performing a hit-
test from/under a foreignObject element which has a 'transform' applied.

Bug: 908570
Change-Id: Icbaf3c15ca7b483f8209d5d0cc8b4613d80d49ce
Reviewed-on: https://chromium-review.googlesource.com/c/1355184
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#612643}(cherry picked from commit d018ec0a783811e6dc7649af0aaaae5a78ebe8ae [formerly 0f6f00aca4fb7794ba38a36aaa806f83ca065f5b])
Reviewed-on: https://chromium-review.googlesource.com/c/1360590
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/branch-heads/3626@{#22}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 543097531a253319c6c06f0949d151f9a3d77b4f